<resources>
    <string name="app_name">Scorekeeper_Rasheen</string>
    <string name="default_score">0</string>
    <string name="default_score_addition">1</string>
    <string name="match_details">Match Details</string>
    <string name="shooting">Shooting</string>
    <string name="free_throws">Free Throws</string>
    <string name="two_pointers">Two Pointers</string>
    <string name="three_pointers">Three Pointers</string>
    <string name="fouls">Fouls</string>
    <string name="_1_point">+1 Point</string>
    <string name="_2_points">+2 Points</string>
    <string name="_3_points">+3 Points</string>
    <string name="scored_by">Add Score By</string>
    <string name="dash">-</string>
    <string name="course_id">Course id :</string>
    <string name="version">Version :</string>
    <string name="email">Email :</string>
    <string name="v1_0">v1.0</string>
    <string name="jav_1001_91253">JAV-1001 - 91253</string>
    <string name="rasheen_ruwisha">Rasheen Ruwisha</string>
    <string name="sheen_ruwisha_gmail_com">sheen.ruwisha@gmail.com</string>
    <string name="name">Name :</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>